Fix aberrant spacing on IE 6 & 7, prevent descending letters from being truncated in homepage almanac stack, fix incorrect cursor on IE6 almanac stack

--- a/communityalmanac/public/css/style.css
+++ b/communityalmanac/public/css/style.css
@@ -1181,14 +1181,18 @@ margin: 0;
 padding: 0;
 list-style-type: none;
 position: relative;
-height: 80px;
 width: 691px;
 background: url(/img/almanac-spine-bg.png) 0 0 no-repeat;
 overflow: hidden;
 }
 
-* html ul#almanacs li {
+* html ul#almanacs li { /* IE6 gets non-transparent bg and adjusted bottom margin */
 background: url(/img/almanac-spine-bg.gif) 0 0 no-repeat;
+margin-bottom: -3px;
+}
+
+*:first-child+html ul#almanacs li { /* IE7 gets adjusted bottom margin */
+margin-bottom: -3px;
 }
 
 ul#almanacs li.almanac-1 {
@@ -1233,32 +1237,45 @@ height: 80px;
 width: 691px;
 text-decoration: none;
 position: relative;
+margin: 0;
+padding: 0;
 }
 
 ul#almanacs li a span.almanac-name { 
 position: absolute;
 left: 245px;
 top: 50%;
-margin-top: -0.5em;
-line-height: 1em;
+margin-top: -0.6em;
 font-size: 1.2em;
 color: #00ace6;
+cursor: pointer;
 }
 
 ul#almanacs li a span.almanac-pagecount {
 font-size: 0.85em;
 padding: 0 0 0 1em;
 color: #b2b32d;
+cursor: pointer;
 } 
 
 ul#almanacs li a span.almanac-timestamp {
 position: absolute;
 right: 48px;
 top: 50%;
-margin-top: -0.5em;
-line-height: 1.2em;
+margin-top: -0.6em;
 font-size: 1em;
 color: #b2b32d;
+cursor: pointer;
+}
+
+* html ul#almanacs li a span.almanac-name,
+* html ul#almanacs li a span.almanac-timestamp { /* IE6 */
+margin-top: -0.8em;
+}
+
+*:first-child+html ul#almanacs li a span.almanac-name,
+*:first-child+html ul#almanacs li a span.almanac-timestamp { /* IE7 */
+margin-top: -0.8em;
 }
 
 ul#almanacs li a:hover span.almanac-name,
